# arcade

./: CMakeLists.txt  README.md
cpp_arcade/: Makefile
cpp_arcade/games/: Makefile
cpp_arcade/games/nibbler/: Makefile
cpp_arcade/games/nibbler/include/: Nibbler.hpp
cpp_arcade/games/pacman/: Makefile
cpp_arcade/games/pacman/src/: Pacman.cpp
cpp_arcade/include/: Entity.hpp  IGame.hpp  Menu.hpp
cpp_arcade/lib/allegro/: Makefile
cpp_arcade/lib/allegro/include/: LibAllegro.hpp
cpp_arcade/lib/allegro/src/: LibAllegro.cpp
cpp_arcade/lib/nCurses/include/: LibNCurses.hpp
cpp_arcade/lib/nCurses/src/: LibNCurses.cpp
cpp_arcade/lib/sdl/src/: LibSDL.cpp
cpp_arcade/src/: main.cpp
cpp_arcade/src/menu/: Menu.cpp
games/nibbler/map/: 1.txt
games/nibbler/src/: Nibbler.cpp
games/pacman/include/: Pacman.hpp
games/pacman/map/: map.txt
include/: Core.hpp  IGraphical.hpp  macro.hpp
lib/: Makefile
lib/nCurses/: Makefile
lib/sdl/: Makefile
lib/sdl/include/: LibSDL.hpp
src/core/: Core.cpp
src/displayable/: Entity.cpp
